--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     restart: always
     hostname: freepbx
     networks:
-      dokploy-network:
+      - dokploy-network
     ports:
       - ":7443"
 
